--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Engenheiro de Software</p>
         </div> 
             <div class="contact-links"> 
-                <a href="https://github.com/l0m2"><i class="fab fa-github"></i>Leopoldo Jacob Matsinhe</a>
+                <a href="https://github.com/l0m2"><i class="fab fa-github"></i>l0m2</a>
                 <a href="https://www.linkedin.com/in/leopoldo-jacob-matsinhe-06a35a27b/"><i class="fab fa-linkedin"></i>Leopoldo Jacob Matsinhe</a>
                 <a href="https://maps.app.goo.gl/4ztAdahsfJZ5wnb67"><i class="fas fa-map-marker-alt"></i>Matola, Machava Socimol</a>
                 <a href="mailto:lmatsinhe378@gmail.com?subject=Assunto%20da%20mensagem"><i class="far fa-envelope"></i>lmatsinhe378@gmail.com</a>
