--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="https://maps.app.goo.gl/4ztAdahsfJZ5wnb67"><i class="fas fa-map-marker-alt"></i>Matola, Machava Socimol</a>
                 <a href="mailto:lmatsinhe378@gmail.com?subject=Assunto%20da%20mensagem"><i class="far fa-envelope"></i>lmatsinhe378@gmail.com</a>
                 <a href="tel:+258849155311"><i class="fas fa-phone"></i>+258849155311</a>
-                <a href="https://wa.me/+258849155311" class="whatsapp"><i class="fab fa-whatsapp">whatsapp</i></a>
+                <a href="https://wa.me/+258849155311" class="whatsapp"><i class="fab fa-whatsapp">Whatsapp</i></a>
             </div> 
         </div>
     </div>
