--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img src="IMG_20171201_155029_729.jpg" alt="Foto de Perfil">
+            <img src="Imagem WhatsApp 2023-08-30 às 10.04.39.....jpg" alt="Foto de Perfil">
     <div class="conteudo">
 
         <h1>Leopoldo Jacob Matsinhe</h1>
@@ -20,6 +20,7 @@
             <div class="contact-links"> 
                 <a href="https://github.com/l0m2"><i class="fab fa-github"></i>l0m2</a>
                 <a href="https://www.linkedin.com/in/leopoldo-jacob-matsinhe-06a35a27b/"><i class="fab fa-linkedin"></i>Leopoldo Jacob Matsinhe</a>
+                <a href="https://www.facebook.com/leopoldo.djimmy"><i class="fab fa-facebook"></i></i>Leopoldo Matsinhe</a>
                 <a href="https://maps.app.goo.gl/4ztAdahsfJZ5wnb67"><i class="fas fa-map-marker-alt"></i>Matola, Machava Socimol</a>
                 <a href="mailto:lmatsinhe378@gmail.com?subject=Assunto%20da%20mensagem"><i class="far fa-envelope"></i>lmatsinhe378@gmail.com</a>
                 <a href="tel:+258849155311"><i class="fas fa-phone"></i>+258849155311</a>
